k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-ghost-k8s
  namespace: ghost-k8s
  labels:
    app: ghost-k8s
    app.kubernetes.io/name: ghost-k8s
    app.kubernetes.io/instance: ghost-k8s
    app.kubernetes.io/version: "5.6"
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: ghost-k8s
spec:
  ports:
  - port: 2368
    protocol: TCP
    targetPort: 2368
    name: ghk3s
  type: ClusterIP
  selector:
    app: ghost-k8s

---
apiVersion: v1
kind: Service
metadata:
  name: service-mysql-ghost-k8s
  namespace: ghost-k8s
  labels:
    app: service-mysql-ghost-k8s
    app.kubernetes.io/name: service-mysql-ghost-k8s
    app.kubernetes.io/instance: ghost-k8s
    app.kubernetes.io/version: "5.6"
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: ghost-k8s
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
    name: mysqlgh
  type: ClusterIP
  clusterIP: None # why is this None?
  selector:
    app: mysql-ghost-k8s
