k8s/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-k8s-ingress
  namespace: ghost-k8s
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - spiritofbrogan.com
    secretName: spiritofbrogan-com-tls
  rules:
  - host: spiritofbrogan.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-ghost-k8s
            port:
              name: ghk3s
